Message model height and text overflow fixed

--- a/src/Pages/index.css
+++ b/src/Pages/index.css
@@ -11,6 +11,17 @@
     color: #fb90b7;
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .input-two {
   border: 0;
   outline: 0;
